fix(insta): close friends refresh + some whitespace removal

--- a/styles/instagram/catppuccin.user.css
+++ b/styles/instagram/catppuccin.user.css
@@ -58,60 +58,51 @@
     @mantle: @catppuccin[@@lookup][@mantle];
     @crust: @catppuccin[@@lookup][@crust];
     @accent-color: @catppuccin[@@lookup][@@accent];
-
     @text_filter: @catppuccin[@@lookup][@text_filter];
     @dark_color: if(@lookup=latte, @text, @crust);
     @light_color: if(@lookup=latte, @crust, @text);
 
-    * {
-      --web-always-black: #rgbify(@dark_color) [];
-      --web-always-white: #rgbify(@light_color) [];
-      --always-white: #rgbify(@light_color) [];
-      --overlay-alpha-80: fadeout(@dark_color, 50);
-      --always-dark-overlay: fadeout(@surface0, 50);
-      --grey-9: #rgbify(@text) [];
-      --ig-primary-background: #rgbify(@base) [];
-      --ig-secondary-background: #rgbify(@surface0) [];
-      --ig-banner-background: #rgbify(@crust) [];
-      --ig-highlight-background: #rgbify(@surface0) [];
-      --ig-elevated-background: #rgbify(@crust) [];
-      --ig-elevated-highlight-background: #rgbify(@surface0) [];
-      --ig-hover-overlay: #rgbify(@text) [], 0.1;
-      --hover-overlay: fadeout(@surface0, 80);
+    --web-always-black: #rgbify(@dark_color) [];
+    --web-always-white: #rgbify(@light_color) [];
+    --always-white: #rgbify(@light_color) [];
+    --overlay-alpha-80: fadeout(@dark_color, 50);
+    --always-dark-overlay: fadeout(@surface0, 50);
+    --grey-9: #rgbify(@text) [];
+    --ig-primary-background: #rgbify(@base) [];
+    --ig-secondary-background: #rgbify(@surface0) [];
+    --ig-banner-background: #rgbify(@crust) [];
+    --ig-highlight-background: #rgbify(@surface0) [];
+    --ig-elevated-background: #rgbify(@crust) [];
+    --ig-elevated-highlight-background: #rgbify(@surface0) [];
+    --ig-hover-overlay: #rgbify(@text) [], 0.1;
+    --hover-overlay: fadeout(@surface0, 80);
+    --ig-text-on-color: #rgbify(@crust) [];
+    --ig-badge: #rgbify(@accent-color) [];
+    --ig-primary-button: #rgbify(@accent-color) [];
+    --ig-primary-button-hover: fadeout(@accent-color, 20);
+    --ig-secondary-button-background: #rgbify(@surface0) [];
+    --ig-secondary-button-hover: #rgbify(@surface1) [];
+    --ig-secondary-button: #rgbify(@text) [];
+    --ig-primary-text: #rgbify(@text) [];
+    --ig-secondary-text: #rgbify(@subtext0) [];
+    --ig-tertiary-text: #rgbify(@subtext0) [];
+    --wbloks-primary-text: @text;
+    --ig-text-on-media: #rgbify(@text) [];
+    --ig-separator: #rgbify(@surface0) [];
+    --chat-admin-text-color: #rgbify (@subtext0) [];
+    --ig-elevated-separator: #rgbify(@surface0) [];
+    --post-separator: #rgbify(@overlay0) [];
+    --ig-stroke: #rgbify(@overlay0) [];
+    --grey-2: #rgbify(@overlay0) [];
+    --ig-link: #rgbify(@accent-color) [];
+    --ig-error-or-destructive: #rgbify(@maroon) [];
+    --ig-success: #rgbify(@green) [];
+    --blue-2: #rgbify(@blue) [];
+    --ig-close-friends-refreshed: #rgbify(@green) [];
+    --ig-text-input-border-hover-prism: #rgbify(@surface1) [];
+    scrollbar-width: none;
+    scrollbar-color: @accent-color @crust;
 
-      --ig-text-on-color: #rgbify(@crust) [];
-
-      --ig-badge: #rgbify(@accent-color) [];
-
-      --ig-primary-button: #rgbify(@accent-color) [];
-      --ig-primary-button-hover: fadeout(@accent-color, 20);
-
-      --ig-secondary-button-background: #rgbify(@surface0) [];
-      --ig-secondary-button-hover: #rgbify(@surface1) [];
-      --ig-secondary-button: #rgbify(@text) [];
-
-      --ig-primary-text: #rgbify(@text) [];
-      --ig-secondary-text: #rgbify(@subtext0) [];
-      --ig-tertiary-text: #rgbify(@subtext0) [];
-      --wbloks-primary-text: @text;
-      --ig-text-on-media: #rgbify(@text) [];
-      --ig-separator: #rgbify(@surface0) [];
-      --chat-admin-text-color: #rgbify (@subtext0) [];
-      --ig-elevated-separator: #rgbify(@surface0) [];
-      --post-separator: #rgbify(@overlay0) [];
-      --ig-stroke: #rgbify(@overlay0) [];
-      --grey-2: #rgbify(@overlay0) [];
-
-      --ig-link: #rgbify(@accent-color) [];
-      --ig-error-or-destructive: #rgbify(@maroon) [];
-      --ig-success: #rgbify(@green) [];
-      --blue-2: #rgbify(@blue) [];
-
-      --ig-text-input-border-hover-prism: #rgbify(@surface1) [];
-
-      scrollbar-width: none;
-      scrollbar-color: @accent-color @crust;
-    }
     //placehoder textcolor
     .xh8yej3 {
       color: @subtext0 !important;
@@ -123,7 +114,6 @@
     } // Sidebar
     .x1xgvd2v {
       background-color: @crust !important;
-
       &[style="transform: translateX(0px);"] {
         background-color: @mantle !important;
       }
@@ -134,7 +124,6 @@
     svg[aria-label="Loading..."] {
       stroke: @text;
     }
-
     // Posts
     ._aggc {
       background-color: @mantle;
@@ -156,7 +145,6 @@
       color: @text;
       fill: @text;
     }
-
     svg[aria-label="Unlike"] {
       fill: @accent-color;
     } // The close icon on the dark wrapper
@@ -166,7 +154,6 @@
     svg[aria-label="Verified"] {
       fill: @accent-color;
     }
-
     //Share box
     .xzloghq {
       background-color: @blue;
@@ -177,7 +164,6 @@
     }
     .xk5f4mz {
       background-color: @mantle;
-
       &:hover {
         background-color: @accent-color;
       }
@@ -188,9 +174,7 @@
         color: @crust;
       }
     }
-
     //all toggle sliders
-
     .x1r7x56h {
       background-color: @accent-color;
     }
@@ -203,16 +187,13 @@
     .x1psfjxj {
       background-color: @text;
     }
-
     span[data-bloks-name="bk.components.TextSpan"] {
       color: @accent-color !important;
     }
-
     // Log In With Facebook text
     ._ab37 {
       color: @blue;
     }
-
     // Excluded:
     // - _9ys7, _9_1f, _9ys8 (verified icon)
 
